[gd_scene load_steps=5 format=2]

[ext_resource path="res://Levels/CommonInfrastructure/HaydenTileFixTileset.tres" type="TileSet" id=1]
[ext_resource path="res://Levels/BossFight/CritterBoxConveyor.gd" type="Script" id=2]
[ext_resource path="res://Levels/BossFight/CritterBoxDestroyer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Objects/Destructibles/DestructibleBoxOfCritters.tscn" type="PackedScene" id=4]

[node name="CritterBoxConveyor" type="Node2D"]
script = ExtResource( 2 )
speed = 150.0

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 0.419608, 0.419608, 0.419608, 1 )
scale = Vector2( 2, 2 )
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 64 )
format = 1
tile_data = PoolIntArray( -1900544, 21, 0, -1900543, 1, 0, -1835008, 21, 0, -1835007, 1, 0, -1769472, 21, 0, -1769471, 1, 0, -1703936, 21, 0, -1703935, 1, 0, -1638400, 21, 0, -1638399, 1, 0, -1572864, 21, 0, -1572863, 1, 0, -1507328, 21, 0, -1507327, 1, 0, -1441792, 21, 0, -1441791, 1, 0, -1376256, 21, 0, -1376255, 1, 0, -1310720, 21, 0, -1310719, 1, 0, -1245184, 21, 0, -1245183, 1, 0, -1179648, 21, 0, -1179647, 1, 0, -1114112, 21, 0, -1114111, 1, 0, -1048576, 21, 0, -1048575, 1, 0, -983040, 21, 0, -983039, 1, 0, -917504, 21, 0, -917503, 1, 0, -851968, 21, 0, -851967, 1, 0, -786432, 21, 0, -786431, 1, 0, -720896, 21, 0, -720895, 1, 0, -655360, 21, 0, -655359, 1, 0, -589824, 21, 0, -589823, 1, 0, -524288, 21, 0, -524287, 1, 0, -458752, 21, 0, -458751, 1, 0, -393216, 21, 0, -393215, 1, 0, -327680, 21, 0, -327679, 1, 0, -262144, 21, 0, -262143, 1, 0, -196608, 21, 0, -196607, 1, 0, -131072, 21, 0, -131071, 1, 0, -65536, 21, 0, -65535, 1, 0, 0, 21, 0, 1, 1, 0, 65536, 21, 0, 65537, 1, 0, 131072, 21, 0, 131073, 1, 0, 196608, 21, 0, 196609, 1, 0, 262144, 21, 0, 262145, 1, 0, 327680, 21, 0, 327681, 1, 0, 393216, 21, 0, 393217, 1, 0, 458752, 21, 0, 458753, 1, 0, 524288, 21, 0, 524289, 1, 0, 589824, 21, 0, 589825, 1, 0, 655360, 21, 0, 655361, 1, 0, 720896, 21, 0, 720897, 1, 0, 786432, 21, 0, 786433, 1, 0, 851968, 21, 0, 851969, 1, 0, 917504, 21, 0, 917505, 1, 0, 983040, 21, 0, 983041, 1, 0, 1048576, 21, 0, 1048577, 1, 0, 1114112, 21, 0, 1114113, 1, 0, 1179648, 21, 0, 1179649, 1, 0, 1245184, 21, 0, 1245185, 1, 0, 1310720, 21, 0, 1310721, 1, 0, 1376256, 21, 0, 1376257, 1, 0, 1441792, 21, 0, 1441793, 1, 0, 1507328, 21, 0, 1507329, 1, 0, 1572864, 21, 0, 1572865, 1, 0, 1638400, 21, 0, 1638401, 1, 0, 1703936, 21, 0, 1703937, 1, 0, 1769472, 21, 0, 1769473, 1, 0, 1835008, 21, 0, 1835009, 1, 0 )

[node name="CritterBoxSpawner" type="Node2D" parent="."]
position = Vector2( -3484, 1916 )

[node name="Timer" type="Timer" parent="CritterBoxSpawner"]
wait_time = 4.0
autostart = true

[node name="CritterBoxDestroyer" parent="." instance=ExtResource( 3 )]
position = Vector2( 3635, -1663 )

[node name="CritterBoxes" type="YSort" parent="."]

[node name="DestructibleBoxOfCritters3" parent="CritterBoxes" instance=ExtResource( 4 )]
position = Vector2( -1470, 938 )

[connection signal="timeout" from="CritterBoxSpawner/Timer" to="." method="_on_Timer_timeout"]
